# dotfiles

./: .Xresources  .compton.conf  .dircolors  .gitignore  .gitmodules  .inputrc  .ls++.conf  .profile  .xbindkeysrc  .xmodmap_prog  README.md  bookmarks  config_slicer.py  config_slicer.sh  convert_to_cbz.sh  cowfortune  dunstrc  els  getCRTC.sh  init.el  install.sh  latex.org  makefile  myinit.org  packages  prog_mode_toggle.sh  progmode.ahk  redshift.conf  smb.conf  tilda_init_script.sh  toggle_audio_powersave.sh  tweaks.org  ventoy.org
.bash_plugins/: vcprompt  vcprompt.md
.urxvt/ext/: keyboard-select  keyboard-select-clipboard.md  resize-font  resize-font.md
atom/: config.cson  keymap.cson  snippets.cson
bash/: .bashrc
clipmenu/stow_ignore/: packages  services
commonlisp/: .sbclrc
commonlisp/.bin/: sbcl-build  sbcl-script
commonlisp/stow_ignore/: create-script-core.lisp  makefile
compton/.config/: compton.conf
conky/: conky.conf  conky_start  eriks_arkham  eriks_metro  eriks_metro_light  eriks_system  eriks_system2  eriks_system_light  start
cursor/: .cursor.Xresources
cursor/stow_ignore/: makefile
deluge/.bin/: deluge-overseer  deluge.py  deluge_manager
deluge/stow_ignore/deluge-cli/: .gitignore  pyproject.toml
deluge/stow_ignore/deluge-cli/src/deluge_cli/: __init__.py  __main__.py  clipboard.py  deluge.py  glob.py  inspecttools.py  loggingtools.py  parser.py  spawningpool.py  threadingtools.py  timetools.py
deluge/stow_ignore/deluge-cli/src/deluge_cli/subcommand/: add.py  core.py  foreach.py
deluge/stow_ignore/deluge-cli/tests/: test_deluge.py  test_glob.py  test_parser.py  test_threadingtools.py  test_timetools.py
desktop_theme/: .cursor.Xresources
display-visor/: Makefile
display_updater/: .display_updaterc  display_updater.py  display_updater.sh  display_updater_rofi.sh  relation.py
emacs/: .emacs.Xresources  README.md
fonts/: .fonts.Xresources
fzf_window_switcher/stow_ignore/fzf_window_switcher/: Cargo.toml
fzf_window_switcher/stow_ignore/fzf_window_switcher/src/: fzf_dmenu.rs  main.rs  x11_stuff.rs
git/: .gitconfig
i3/: .i3_popup_term.sh  blacken_screen.sh  config  create-lock-img.sh  display_updater.sh  i3_brightness.sh  i3blocks.conf  lock.sh  mouse_dance.sh  restore_screen.sh  rofi_script_selector.sh  scrot_clipboard.sh  vlc_gray.sh  workspace-1.json  workspace-2.json
kbdlayout/: .xmodmap_prog
keyboard-layout/: se
magic/: .magic
makefiles/: c-makefile  java-makefile  latex-makefile
mpv/: input.conf  mpv.conf
other/: battery-checker  battery-checker.service  battery-checker.timer  ffmpeg_recepies.org  gallery-dl-manga.json  others.md  smb.conf  systemd_tweaks.md
polybar/: config  mounts.sh  music_info.sh  playerctl_all.sh  powersave.sh  progmode  run_polybar.sh  screenmng_polybar.sh  scrolling_title.sh
power/: battery-checker  screenmng.sh
ranger/: commands.py  r.shell  rc.conf  rifle.conf  scope.sh
readline/: .inputrc
rememberer/: rememberer
rofi/: config
screenlock/: README.md
scripts/: .emoji  clipit-rofi.py  config_slicer.py  convert_to_cbz.sh  els  extract.sh  m4_start.sh  mangadex_downloader.py  open_downloaded_pdf.sh  prog_mode_toggle.sh  random_anime.py  run_polybar.py  run_polybar.sh  run_polybar_many.sh  sxiv_zip.sh
scripts/stow_ignore/udev_notifier/: pyproject.toml
scripts/stow_ignore/udev_notifier/src/udev_notifier/: udev_notifier.py
sxiv/: .sxiv.Xresources  config.h
termite/: config
themes/: feh_loop.sh  init_theme.sh  theme_select.sh  theme_select_rofi.sh
tmux/: .tmux.conf
urxvt/: .Xresources  .urxvt.Xresources  eval
vim/: .vimrc
xmonad/: .xinitrc  CompactWorkspaces.hs  IndiPP.hs  MyLimitWindows.hs  MyStuff.hs  Spacing.hs  ThreeColP.hs  xmonad.hs  xmonadLog.sh
xmonad/stow_ignore/xmonad/: my-xmonad.cabal  stack.yaml  xmonad.hs
xmonad/stow_ignore/xmonad/lib/Erik/: CompactWorkspaces.hs  DoubleMaster.hs  IfVertical.hs  IndiPP.hs  MyLimitWindows.hs  MyStuff.hs  ThreeColP.hs
zathura/: zathurarc
zsh/: .profile  .zprofile  .zshenv  .zshrc
(+445 files in other folders)
