[project]
name = "deluge-cli"
version = "0.1.0"
description = "Add your description here"
authors = []
requires-python = ">=3.13"
dependencies = [
    "deluge-client>=1.10.2,<2.0.0",
]

[project.scripts]
deluge-cli = "deluge_cli.__main__:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pylint>=4.0.3,<5.0.0",
    "pyright>=1.1.407,<2.0.0",
    "pytest>=9.0.1,<10.0.0",
]

# NOTE: pyright, when started from flycheck, can't find installed packages, unless this is
# set, even though the execitable from within the venv is used
[tool.pyright]
venv = ".venv"
venvPath = "."
# typeCheckingMode = "strict"
