name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is:             ../xmonad.hs
  other-modules:       Erik.DoubleMaster
                       Erik.IndiPP
                       Erik.IfVertical
                       Erik.MyLimitWindows
                       Erik.CompactWorkspaces
                       Erik.MyStuff
                       Erik.ThreeColP
  build-depends:       base
                     , xmonad >= 0.18.0
                     , xmonad-contrib >= 0.18.1
                     , mtl
                     , X11
                     , containers
                     , regex-compat
                     , unix
                     , directory
                     , filepath
                     , utf8-string
  hs-source-dirs:      ./lib
  default-language:    Haskell2010
  default-extensions:  PartialTypeSignatures
  ghc-options:         -Wall -Wextra -fno-warn-missing-signatures -fno-warn-partial-type-signatures
